add IP and mod work

--- a/_includes/mods.html
+++ b/_includes/mods.html
@@ -1,3 +1,5 @@
-<div id="mods">placeholder</div>
+<div class="mods" id="mods">placeholder</div>
+
+<link rel="stylesheet" href="mods.css">
 
 <script src="../json.js"></script>
