--- a/_includes/mods.css
+++ b/_includes/mods.css
@@ -1,3 +1,56 @@
-.mods {
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap');
+
+.mod {
     display: inline-block;
+    margin: 20px;
+    padding: 20px;
+    position: relative;
+    width: 400px;
+    height: 300px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 10px black;
+    background: rgba(20, 20, 20, 0.5);
 }
+
+.mod_logo {
+    width: 64px;
+    height: 64px;
+    border-radius: 184px;
+    border: 3px solid;
+}
+
+.name {
+    top: 45px;
+    left: 105px;
+    position: absolute;
+    font-family: Josefin Sans;
+    font-size: 18pt;
+}
+
+.author {
+    font-weight: 300;
+    font-family: Josefin Sans;
+    bottom: 0;
+    position: absolute;
+}
+
+.author a {
+    text-decoration: none;
+    color: black;
+    opacity: 0.5;
+    transition: .5s all;
+}
+
+.author a:hover {
+    opacity: 1;
+}
+
+.summary {
+    position: absolute;
+    display: inline-block;
+    top: 120px;
+    font-family: Josefin Sans;
+    font-size: 18pt;
+    font-weight: 300;
+}
+
