switch to iframe

--- a/_includes/mods.html
+++ b/_includes/mods.html
@@ -1,5 +1,13 @@
-<div class="mods" id="mods">placeholder</div>
-
-<link rel="stylesheet" href="mods.css">
-
-<script src="../json.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mod List</title>
+</head>
+<body>
+    <div class="mods" id="mods">placeholder</div>
+    <script src="../json.js"></script>
+</body>
+</html>
