--- a/mods.css
+++ b/mods.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap');
 
+html {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(bg.png);
+}
+
 .mod {
     display: inline-block;
     margin: 20px;
